# smart_mirror

./: .gitignore  README.md
backend/: README.md  app.py  auth.py  db.py  face_store.py  gemini.py  gesture_service.py  jarvis.py  pyproject.toml  register_face.py  requirements.txt  speech_service.py  whoop.py
configure_frontend/: index.html  package-lock.json  package.json  vite.config.ts
configure_frontend/api/: whoop-exchange.js
configure_frontend/src/: App.tsx
configure_frontend/src/components/: AddressInput.tsx  FaceLogin.tsx  LayoutEditor.tsx  NameEntry.tsx  RegisterFace.tsx  WidgetRenderer.tsx
configure_frontend/src/db/: layout.ts  settings.ts  whoop.ts
configure_frontend/src/hooks/: useAuth.ts  useUser.ts
configure_frontend/src/lib/: supabase.ts
configure_frontend/src/widgets/: ClockWidget.tsx  GeminiChatWidget.tsx  GreetingWidget.tsx  HourlyWeatherWidget.tsx  JarvisChatWidget.tsx  NewsWidget.tsx  ReelsWidget.tsx  SportsWidget.tsx  TransitWidget.tsx  WeatherWidget.tsx  WhoopWidget.tsx  index.ts  registry.ts
deploy/: smart-mirror.service  start.sh
frontend/: package.json
frontend/src/: App.tsx  GestureController.tsx
mirror_frontend/: index.html  package.json
mirror_frontend/src/: App.tsx  index.css
mirror_frontend/src/components/: WidgetRenderer.tsx
mirror_frontend/src/hooks/: useHourlyWeather.ts  useRecognition.ts  useWeather.ts
mirror_frontend/src/pages/: MirrorPage.tsx
mirror_frontend/src/widgets/: ClockWidget.tsx  GeminiChatWidget.tsx  GreetingWidget.tsx  HourlyWeatherWidget.tsx  JarvisChatWidget.tsx  NewsWidget.tsx  ReelsWidget.tsx  SportsWidget.tsx  TransitWidget.tsx  WeatherWidget.tsx  WhoopWidget.tsx  index.ts  registry.ts
modal_register/: register_service.py
