[project]
name = "smart-mirror-backend"
version = "0.1.0"
description = "Smart mirror backend"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "flask>=3.0",
    "flask-cors>=4.0",
    "face-recognition>=1.3.0",
    "dlib>=19.24,<20",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    # face_recognition_models imports pkg_resources; setuptools 82+ drops pkg_resources
    "setuptools>=69,<81",
    "supabase>=2.0,<2.10",
    "google-genai>=1.0",
    "openai>=1.0",
    "requests>=2.28",
    "openwakeword>=0.6",
    "sounddevice>=0.4",
    "websocket-client>=1.0",
    # openWakeWord inference backend. tflite-runtime is used on 32-bit ARM
    # (Raspberry Pi armv7l) via the override below; everywhere else we use
    # onnxruntime, which has wheels for macOS (arm64/x86_64) and 64-bit Linux
    # (x86_64/aarch64, i.e. Raspberry Pi OS 64-bit).
    "onnxruntime>=1.17; platform_machine != 'armv7l'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py", "db.py", "face_store.py"]

[tool.uv]
# tflite-runtime only has Linux wheels and only for Python <3.12;
# our code falls back to onnxruntime on all other platforms.
override-dependencies = [
    "tflite-runtime>=2.14; python_version < '3.12' and sys_platform == 'linux'",
    "onnxruntime<1.24; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]



