[project]
name = "smart-mirror-backend"
version = "0.1.0"
description = "Smart mirror backend"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "flask>=3.0",
    "flask-cors>=4.0",
    "face-recognition>=1.3.0",
    "dlib>=19.24,<20",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    # face_recognition_models imports pkg_resources; setuptools 82+ drops pkg_resources
    "setuptools>=69,<81",
    "supabase>=2.0,<2.10",
    "google-genai>=1.0",
    "openai>=1.0",
    "requests>=2.28",
    "openwakeword>=0.6",
    "sounddevice>=0.4",
    "websocket-client>=1.0",
    # openWakeWord inference backend. tflite-runtime is used on 32-bit ARM
    # (Raspberry Pi armv7l) via the override below; everywhere else we use
    # onnxruntime, which has wheels for macOS (arm64/x86_64) and 64-bit Linux
    # (x86_64/aarch64, i.e. Raspberry Pi OS 64-bit).
    # 1.20.0 (Oct 2024) is the first release with Python 3.13 wheels.
    "onnxruntime>=1.20; platform_machine != 'armv7l'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py", "db.py", "face_store.py"]

[tool.uv]
# NOTE: do NOT add onnxruntime here — uv's override-dependencies replaces the
# marker for a package across the whole resolution graph, which silently
# prevents it from installing on platforms we actually want (e.g. linux/aarch64).
# onnxruntime is a direct dep above with the correct marker.
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]



